# mzimeja

./: .gitignore  CMakeLists.txt  ChangeLog.txt  HISTORY.txt  HowToBuild.txt  README.md  README.txt  READMEJP.txt  README_ja.txt  dict.hpp  do_sign_all.bat  installer.iss  installer32.iss  installer3264.iss  installer64.iss  installerd.iss  installerd32.iss  installerd3264.iss  installerd64.iss  make_dict.bat  make_low_level_setup.bat  make_low_level_setupd.bat  str.hpp
.github/workflows/: msbuild.yml
dict_compile/: dict_compile.cpp  dict_compile_res.rc
docs/: VIBRATO_FINAL_SUMMARY.md  VIBRATO_IMPLEMENTATION_STATUS.md  VIBRATO_USAGE_ja.md
ime/: CMakeLists.txt  cand_info.cpp  comp_str.cpp  config.cpp  convert.cpp  debug.cpp  footmark.hpp  imm.cpp  input.cpp  input.h  keychar.cpp  main.cpp  mzimeja.h  mzimeja_res.rc  postal.cpp  process.cpp  regword.cpp  resource.h  tests.cpp  ui.cpp  uicand.cpp  uicomp.cpp  uiguide.cpp  uistate.cpp  vibrato_engine.cpp  vibrato_engine.h  vksub.cpp  vksub.h
ime/lang/: en_US.rc  ja_JP.rc
ime_setup/: CMakeLists.txt  Wow64.h  ime_setup.cpp  ime_setup_res.rc  resource.h
ime_setup/lang/: en_US.rc
imepad/: Wow64.h  imepad.cpp  imepad_res.rc  resource.h
imepad/lang/: en_US.rc  ja_JP.rc
res/: basic.dic  name.dic  testdata.dic
tools/: convert_mecab_dict.sh
verinfo/: verinfo_res.rc
